fix: show cars add wrap

--- a/src/app/cars/cars.module.css
+++ b/src/app/cars/cars.module.css
@@ -1,6 +1,9 @@
 .container{
     width: 10px;
     height: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .carPicture{
     max-width: 100%;
